--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "lorisleiva/laravel-actions": "^2.8",
         "maatwebsite/excel": "^3.1",
         "orchid/crud": "^4.2",
-        "orchid/platform": "^14.30"
+        "orchid/platform": "^14.30",
+        "rap2hpoutre/fast-excel": "^5.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
