--- a/package.json
+++ b/package.json
@@ -3,11 +3,24 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "ws": "node scripts/ws-server.js"
+    },
+    "dependencies": {
+        "bootstrap-icons": "^1.13.1",
+        "dotenv": "^17.2.4",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "recharts": "^2.10.3",
+        "ws": "^8.17.1"
     },
     "devDependencies": {
+        "@types/react": "^18.3.28",
+        "@types/react-dom": "^18.3.7",
+        "@vitejs/plugin-react": "^4.2.0",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
+        "typescript": "^5.9.3",
         "vite": "^5.0"
     }
 }
